# structure

./: .gitignore  BACKEND_GUIDE.md  GIT_SETUP_GUIDE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SCRIPTS_README.md  git_commands.ps1  git_commands.sh  quick_git.ps1  setup_git.ps1
backend/: .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
backend/apps/common/: exceptions.py  pagination.py  permissions.py
backend/apps/common/utils/: helpers.py
backend/apps/users/: admin.py  apps.py  models.py  selectors.py  serializers.py  services.py  signals.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/apps/users/tests/: test_models.py
backend/config/: settings.py  urls.py
backend/config/settings/: __init__.py  base.py  dev.py  prod.py
backend/requirements/: base.txt  dev.txt  prod.txt
backend/scripts/: seed_demo.py  test_api.py  wait_for_db.py
frontend/: jsconfig.json  package-lock.json  package.json
frontend/src/app/: layout.js  layout.jsx  not-found.jsx  page.js  page.jsx
frontend/src/app/about/: page.jsx
frontend/src/app/contact/: page.jsx
frontend/src/app/home/: page.jsx
frontend/src/app/integrations/: page.jsx
frontend/src/app/price/: page.jsx
frontend/src/app/project/: page.jsx
frontend/src/app/project-details/: page.jsx
frontend/src/app/register/: page.jsx
frontend/src/app/sign-in/: page.jsx
frontend/src/components/about/: index.jsx
frontend/src/data/: answer-question-data.js
frontend/src/styles/: globals.scss  variables.scss
(+19 files in other folders)
